Added registration and login functions for user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     networks:
       - appnet
     env_file: 'server/.env'
+    ports:
+      - '27017:27017'
     volumes:
       - ./db_data:/data/db
     environment:
