Add Group,Channel,Post,Message schemas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       - mongo-express
     ports:
       - '3000:3000'
+    volumes:
+      - ./server:/app
+    restart: always
     command: yarn run start:dev
 
   database:
