--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@types/graphql": "^14.5.0",
+    "@types/uuid": "^9.0.2",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -51,7 +52,8 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
