Add JwtGuard and AdminGuard

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,5 @@ ME_CONFIG_MONGODB_ADMINPASSWORD=mongo_admin
 ME_CONFIG_MONGODB_URL=mongodb://username:password@database:27017/
 MONGODB_URI=mongodb://database/nest
 SERVER_PORT=3001
+JWT_SECRET_KEY=some_secret_key
+JWT_PUBLIC_KEY=some_public_key
