--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "tss-react": "^4.8.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
