--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write \"src/**/*.@(js|jsx|ts|tsx)\""
+    "format": "prettier --write \"src/**/*.@(js|jsx|ts|tsx|css)\""
   },
   "eslintConfig": {
     "extends": [
