Add file upload logic

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,3 +7,7 @@ MONGODB_URI=mongodb://database/nest
 SERVER_PORT=3001
 JWT_SECRET_KEY=some_secret_key
 JWT_PUBLIC_KEY=some_public_key
+AWS_REGION=eu-north-1
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_PUBLIC_BUCKET_NAME=your_aws_bucket
