--- a/server/package.json
+++ b/server/package.json
@@ -39,21 +39,33 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/apollo-upload-client": "^17.0.2",
+    "@types/aws-sdk": "^2.7.0",
     "@types/graphql": "^14.5.0",
+    "@types/graphql-upload": "^16.0.0",
     "@types/uuid": "^9.0.2",
     "apollo-server-express": "^3.12.0",
+    "apollo-upload-client": "^17.0.0",
+    "aws-sdk": "^2.1420.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs-capacitor": "^8.0.0",
     "graphql": "^16.7.1",
     "graphql-tools": "^9.0.0",
+    "graphql-upload": "^16.0.2",
     "mongoose": "^7.3.1",
+    "node-fetch": "2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "uuid": "^9.0.0"
+    "tiny-csrf": "^1.1.3",
+    "uuid": "^9.0.0",
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
