Update file upload logic

--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,9 @@ ME_CONFIG_MONGODB_ADMINPASSWORD=admin
 ME_CONFIG_MONGODB_URL=mongodb://root:root@database:27017/
 MONGODB_URI=mongodb://root:root@database/nest?authSource=admin
 SERVER_PORT=3000
-JWT_SECRET=18mH5XF0Iebv63vHRoAVPgNlVyr3djOpQItmUnJwTAv2sD5jtd
+JWT_SECRET_KEY=18mH5XF0Iebv63vHRoAVPgNlVyr3djOpQItmUnJwTAv2sD5jtd
+JWT_PUBLIC_KEY=sNJ7v8Gj9F1AWPiTarOaNBF7XeSUM0Qo1sVhLKJA73rosGsQo0
+AWS_REGION=eu-north-1
+AWS_ACCESS_KEY_ID=AKIATQ7NXT5CAHECKW6M
+AWS_SECRET_ACCESS_KEY=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
+AWS_PUBLIC_BUCKET_NAME=webchat-bucket
