--- a/server/package.json
+++ b/server/package.json
@@ -57,6 +57,7 @@
     "graphql": "^16.7.1",
     "graphql-tools": "^9.0.0",
     "graphql-upload": "^16.0.2",
+    "graphql-upload-minimal": "^1.5.4",
     "mongoose": "^7.3.1",
     "node-fetch": "2",
     "passport": "^0.6.0",
@@ -74,6 +75,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.12",
