--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "allowJs": true,
+    "maxNodeModuleJsDepth": 10,
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -18,6 +20,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src", "test"],
+  "include": ["src","test"],
   "exclude": ["node_modules"]
 }
