--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,8 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.1.3",
+    "@nestjs/websockets": "^10.1.3",
     "@types/apollo-upload-client": "^17.0.2",
     "@types/aws-sdk": "^2.7.0",
     "@types/graphql": "^14.5.0",
