--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
